@@ -55,6 +55,7 @@
 - [#532] Unexpected error occurs when zoom out image.
 - [#537] Valentina crashes when use undo command.
 - [#544] Error: Color Lines are black until touched.
+- [#543] Detail loses details.
 
 # Version 0.4.4 April 12, 2016
 - Updated measurement templates with all measurements. Added new template Aldrich/Women measurements.
